  - Reduced the amount of tension generated from multiples sources and slightly increased decay so small scale wars do not instantly rocket the world tension
  - Removed the Surrender Limit from the nuclear ideas for the time being
  - "Assume Debt" now requires the target nation to not have more than double your GDP
  - Increased lethality of SAMs by ~15% and reduced IC cost for ~10%

 Bugfix:
  - Fixed the Automatic Debt Repayment forcing you into the negatives
  - Fixed the configurable UI display for resources and tax cost factor breaking
  - Fixed an issue that caused crashing if you hovered over 2 Syrian focuses
  - Fixed an issue with localization for the Iranian nuclear tree if the U.S. does not exist
  - Augmented Vision techs now correctly show after copmleting their special project
  - Fixed the missing icon for High Efficiency Engines doctrine
  - Fixed tank guns requiring heavy tank turret to be always mounted
  - Fixed the Space Program special projects not being researchable due to needing a DLC tech
  - Fixed trigger for Poland checking for removed idea, bloating the logs
  - Fixed Libyan Oil Nationalisation and Tribalism modifiers not being transferred correctly during civil war
  - Fixed the "Remove Previous Kleptocrats" in Serbia not removing an idea it should
  - Fixed the Armenian focus "Communism Codex" focus making you have no religion icon
  - Fixed some effects forcing duplicate gov_coalition_array members causing you to have a ton more government coalition support then you should
  - Fixed Afghanistan event "Afghanistan Appeals for Support" showing they'll get something for saying no
  - Overlord subsides should now properly cancel if the subject no longer exists
  - Fixed a spamming error with regards to the KHZ for a bunch of idle sounds

 Content:
  - Added focus shortcuts for Brazil, Venezuela
  - Added several new Internal Faction Events