@@ -75,13 +75,13 @@ non_indifferent_oligarchs = {
 oligarchs_at_least_positive_opinion = {
 	custom_trigger_tooltip = {
 		tooltip = oli_at_least_positive_tt
-		check_variable = { oligarchs_opinion > 59 }
+		check_variable = { oligarchs_opinion > 50 }
 	}
 }
 oligarchs_not_positive_opinion = {
 	custom_trigger_tooltip = {
 		tooltip = oli_not_positive_tt
-		check_variable = { oligarchs_opinion < 59 }
+		check_variable = { oligarchs_opinion < 50 }
 	}
 }
 
@@ -111,7 +111,7 @@ non_indifferent_industrial_conglomerates = {
 industrial_conglomerates_at_least_enthusiastic_opinion = {
 	custom_trigger_tooltip = {
 		tooltip = industrial_conglomerates_at_least_enthusiastic_tt
-		check_variable = { industrial_conglomerates_opinion > 79 }
+		check_variable = { industrial_conglomerates_opinion > 74 }
 	}
 }
 
@@ -202,13 +202,13 @@ non_indifferent_the_military = {
 military_at_least_enthusiastic_opinion = {
 	custom_trigger_tooltip = {
 		tooltip = military_at_least_enthusiastic_tt
-		check_variable = { the_military_opinion > 79 }
+		check_variable = { the_military_opinion > 74 }
 	}
 }
 military_at_least_positive_opinion = {
 	custom_trigger_tooltip = {
 		tooltip = military_at_least_positive_tt
-		check_variable = { the_military_opinion > 59 }
+		check_variable = { the_military_opinion > 50 }
 	}
 }
 
@@ -316,7 +316,7 @@ non_indifferent_the_priesthood = {
 the_priesthood_at_least_enthusiastic_opinion = {
 	custom_trigger_tooltip = {
 		tooltip = the_priesthood_at_least_enthusiastic_tt
-		check_variable = { the_priesthood_opinion > 79 }
+		check_variable = { the_priesthood_opinion > 75 }
 	}
 }
 the_priesthood_at_least_indifferent_opinion = {
@@ -406,13 +406,13 @@ non_indifferent_communist_cadres = {
 communist_cadres_at_least_enthusiastic_opinion = {
 	custom_trigger_tooltip = {
 		tooltip = communist_cadres_at_least_enthusiastic_tt
-		check_variable = { communist_cadres_opinion > 79 }
+		check_variable = { communist_cadres_opinion > 75 }
 	}
 }
 communist_cadres_at_least_positive_opinion = {
 	custom_trigger_tooltip = {
 		tooltip = communist_cadres_at_least_positive_tt
-		check_variable = { communist_cadres_opinion > 59 }
+		check_variable = { communist_cadres_opinion > 51 }
 	}
 }
 
