@@ -72,7 +72,7 @@
  neutral_ind_tt: "§Y[?THIS.industrial_conglomerates_opinion|2]§!"
  display_industrial_conglomerates_opinion: "Opinion of §Y$industrial_conglomerates$§! changes by [?temp_opinion|+0] (Current: [IND_opinion_display])\n"
 
- industrial_conglomerates_at_least_enthusiastic_tt: "§Y$industrial_conglomerates$§! opinion at least 80 (Current: [IND_opinion_display])"
+ industrial_conglomerates_at_least_enthusiastic_tt: "§Y$industrial_conglomerates$§! opinion at least 75 (Current: [IND_opinion_display])"
 
  # Oligarchs
  NIG_oligarchs: "Tribal Leaders"
@@ -88,8 +88,8 @@
  neutral_oli_tt: "§Y[?THIS.oligarchs_opinion|2]§!"
  display_oligarchs_opinion: "Opinion of §Y$oligarchs$§! changes by [?temp_opinion|+0] (Current: [OLI_opinion_display])\n"
 
- oli_at_least_positive_tt: "§Y$oligarchs$§! opinion at least 60 (Current: [OLI_opinion_display])"
- oli_not_positive_tt: "§Y$oligarchs$§! opinion below 60 (Current: [OLI_opinion_display])"
+ oli_at_least_positive_tt: "§Y$oligarchs$§! opinion at least 51 (Current: [OLI_opinion_display])"
+ oli_not_positive_tt: "§Y$oligarchs$§! opinion below 50 (Current: [OLI_opinion_display])"
 
  # Militaristic Factions
  # Military-Industrial Complex
@@ -143,8 +143,8 @@
  neutral_mili_tt: "§Y[?THIS.the_military_opinion|2]§!"
  display_the_military_opinion: "Opinion of §Y$the_military$§! changes by [?temp_opinion|+0] (Current: [MILI_opinion_display])\n"
 
- military_at_least_enthusiastic_tt: "§Y$the_military$§! opinion at least 80 (Current: [MILI_opinion_display])"
- military_at_least_positive_tt: "§Y$the_military$§! opinion at least 60 (Current: [MILI_opinion_display])"
+ military_at_least_enthusiastic_tt: "§Y$the_military$§! opinion at least 75 (Current: [MILI_opinion_display])"
+ military_at_least_positive_tt: "§Y$the_military$§! opinion at least 51 (Current: [MILI_opinion_display])"
 
  # Intelligence Community
  GER_intelligence_community: "Bundesnachrichtendienst"
@@ -314,8 +314,8 @@
  neutral_com_tt: "§Y[?THIS.communist_cadres_opinion|2]§!"
  display_communist_cadres_opinion: "Opinion of §Y$communist_cadres$§! changes by [?temp_opinion|+0] (Current: [COM_opinion_display])\n"
 
- communist_cadres_at_least_enthusiastic_tt: "§Y$communist_cadres$§! opinion at least 80 (Current: [COM_opinion_display])\n"
- communist_cadres_at_least_positive_tt: "§Y$communist_cadres$§! opinion at least 60 (Current: [COM_opinion_display])\n"
+ communist_cadres_at_least_enthusiastic_tt: "§Y$communist_cadres$§! opinion at least 75 (Current: [COM_opinion_display])\n"
+ communist_cadres_at_least_positive_tt: "§Y$communist_cadres$§! opinion at least 50 (Current: [COM_opinion_display])\n"
 
  # Religious Factions
  # The Priesthood
@@ -329,7 +329,7 @@
  neutral_priest_tt: "§Y[?THIS.the_priesthood_opinion|2]§!"
  display_the_priesthood_opinion: "Opinion of §Y$the_priesthood$§! changes by [?temp_opinion|+0] (Current: [PRIEST_opinion_display])\n"
 
- the_priesthood_at_least_enthusiastic_tt: "§Y$the_priesthood$§! opinion at least 80 (Current: [PRIEST_opinion_display])\n"
+ the_priesthood_at_least_enthusiastic_tt: "§Y$the_priesthood$§! opinion at least 75 (Current: [PRIEST_opinion_display])\n"
  the_priesthood_at_least_indifferent_tt: "§Y$the_priesthood$§! opinion at least 50 (Current: [PRIEST_opinion_display])\n"
 
  # The Ulema
