@@ -26,6 +26,7 @@ v1.11.1
   - Removed the Surrender Limit from the nuclear ideas for the time being
   - "Assume Debt" now requires the target nation to not have more than double your GDP
   - Increased lethality of SAMs by ~15% and reduced IC cost for ~10%
+  - Reduced the opinion required for the Chinese focuses to make it easier to do focuses
 
  Bugfix:
   - Fixed the Automatic Debt Repayment forcing you into the negatives
